--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
                                <p>Everyone should be help people, because they are very helpless. Insollah we can save Sylhet people. are you agree for stand with Sylhet.</p>
                            </div>
                            <div class="item4">
-                               <img class="img1" src="./icons/shelter.png" alt="" srcset="">
+                               <img src="./icons/shelter.png" alt="" srcset="">
                                <h1>shelter for a family</h1>
                                <p>Everyone should be help people, because they are very helpless. Insollah we can save Sylhet people. are you agree for stand with Sylhet</p>
                            </div>
                            <div class="item5">
                                <img src="./icons/Frame-1.png" alt="" srcset="">
-                               <h1>Edukation for a chaild</h1>
+                               <h1>Education for a chaild</h1>
                                <p>Everyone should be help people, because they are very helpless. Insollah we can save Sylhet people. are you agree for stand with Sylhet.</p>
                            </div>
                        </div>
